opam-version: "2.0"
maintainer: "Daniel Bünzli <daniel.buenzl i@erratique.ch>"
authors: ["Daniel Bünzli <daniel.buenzl i@erratique.ch>"]
homepage: "http://erratique.ch/software/topkg"
doc: "http://erratique.ch/software/topkg/doc"
license: "ISC"
dev-repo: "git+http://erratique.ch/repos/topkg.git"
bug-reports: "https://github.com/dbuenzli/topkg/issues"
tags: ["packaging" "ocamlbuild" "org:erratique"]
depends: [
  "ocaml" {>= "4.01.0"}
  "ocamlfind" {build & >= "1.6.1"}
  "ocamlbuild"
  "topkg" {= "0.9.1"}
  "result"
  "fmt"
  "logs"
  "bos" {>= "0.1.5"}
  "cmdliner" {>= "1.0.0"}
  "webbrowser"
  "opam-format" {>= "2.0.0"}
]
build:[
  "ocaml" "pkg/pkg.ml" "build"
          "--pkg-name" name
          "--dev-pkg" "%{pinned}%"
]
synopsis: "Topkg is a packager for distributing OCaml software."
description: """
It provides an API to describe the files a package installs in a given build configuration and to specify information about the package's distribution, creation and publication procedures.
The optional topkg-care package provides the topkg command line tool which helps with various aspects of a package's life cycle: creating and linting a distribution, releasing it on the WWW, publish its documentation, add it to the OCaml OPAM repository, etc.
Topkg is distributed under the ISC license and has no dependencies. This is what your packages will need as a build dependency.
Topkg-care is distributed under the ISC license it depends on fmt, logs, bos, cmdliner, webbrowser and opam-lib.
Home page: http://erratique.ch/software/topkg
Contact: Daniel Bünzli <daniel.buenzl i@erratique.ch>
"""